--- a/Styles/1st ass.css
+++ b/Styles/1st ass.css
@@ -51,7 +51,7 @@ body {
 }
 
 #baner-p {
-    color: grey;
+    color: rgb(99, 99, 99);
     margin: 0 294px;
     text-align: center;
     margin-top: 25px;
@@ -228,7 +228,6 @@ body {
     width: 1140px;
     height: 313px;
     color: white;
-    border: 2px solid red;
     border-radius: 16px;
     margin: 0 auto;
     background-image: linear-gradient(180.00deg, rgba(7, 2, 17, 0.453), rgba(7, 2, 17, 0.453) 100%),
@@ -271,7 +270,16 @@ body {
 .footer {
     max-width: 1440px;
     height: 100px;
-    border: 2px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 150px;
     margin: 0 auto;
+    margin-top: 80px;
     background-color: rgba(13, 19, 33, 0.03);
+ 
+}
+.f-img{
+    height: 80px;
+    width: 80px;    
 }
