--- a/Styles/1st ass.css
+++ b/Styles/1st ass.css
@@ -1,5 +1,7 @@
 * {
     margin: 0;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 body {
@@ -16,7 +18,7 @@ body {
     height: 130px;
     max-width: 1440px;
     margin: 0 auto;
-    padding: 0 150px;
+    padding: 0 20px;
 }
 
 #btn1 {
@@ -268,7 +270,7 @@ body {
 
 /* footer style  */
 .footer {
-    max-width: 1440px;
+   max-width: 1445px;
     height: 100px;
     display: flex;
     align-items: center;
