--- a/Styles/1st ass.css
+++ b/Styles/1st ass.css
@@ -10,7 +10,6 @@ body {
 
 /* Nav Bar style */
 .nav {
-    font-family: 'Consolas';
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -18,7 +17,7 @@ body {
     height: 130px;
     max-width: 1440px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 #btn1 {
@@ -29,6 +28,8 @@ body {
     height: 58px;
     font-size: 20px;
     font-weight: 600;
+    opacity: 50%;
+    font-family: 'Azeret mono';
 }
 
 /* banner style */
@@ -53,10 +54,11 @@ body {
 }
 
 #baner-p {
-    color: rgb(99, 99, 99);
+    color: rgb(80, 80, 80);
     margin: 0 294px;
     text-align: center;
     margin-top: 25px;
+    font-size: 20px;
 
 }
 
@@ -162,9 +164,7 @@ body {
 }
 
 .mct_e {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    text-align: left;
     justify-content: space-between;
     border-radius: 16px;
     width: 364px;
@@ -270,7 +270,7 @@ body {
 
 /* footer style  */
 .footer {
-   max-width: 1445px;
+    max-width: 1445px;
     height: 100px;
     display: flex;
     align-items: center;
@@ -279,9 +279,10 @@ body {
     margin: 0 auto;
     margin-top: 80px;
     background-color: rgba(13, 19, 33, 0.03);
- 
+
 }
-.f-img{
+
+.f-img {
     height: 80px;
-    width: 80px;    
+    width: 80px;
 }
